examples/valid/condicao.mc
int valor = 7;
bool positivo;

positivo = valor > 0;

if (positivo) {
    print("positivo");
} else {
    print("nao positivo");
}
