examples/invalid/nao_declarada.mc
valor = 10;
print(valor);
